--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.8.4",
     "formik": "^2.4.6",
     "modern-normalize": "^3.0.1",
     "nanoid": "^5.1.2",
@@ -19,6 +20,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
+    "reselect": "^5.1.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
